--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "robofriends",
-  "homepage": "https://Jasper19901029.github.io/robofriends",
+  "homepage": "https://github.com/Jasper19901029/RobotFriends.git",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
