--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robofriends",
-  "homepage": "https://github.com/Jasper19901029/RobotFriends.git",
+  "homepage": "https://github.com/Jasper19901029/RobotFriends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
